# claude-config

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  COMMAND-AUDIT.md  PRINCIPLE_SNIPPETS.md  README.md  TODO.md  commands-audit.md  commands-backlog-ideate.md  commands-ci.md  commands-distill.md  commands-prime.md  commands-scope.md  commands-setup-review-command.md  commands-thinktank.md  commands-verify.md  context.md  knowledge.archive.md  knowledge.md  portfolio.yaml  settings.json  stats-cache.json  statusline-command.sh  statusline.sh
agents/: README  adr-architect.md  agent-updater.md  api-design-specialist.md  architecture-guardian.md  bug-detective.md  bug-historian.md  complexity-archaeologist.md  config-auditor.md  data-integrity-guardian.md  dependency-health-monitor.md  design-systems-architect.md  documentation-quality-reviewer.md  dx-optimizer.md  error-handling-specialist.md  fowler.md  go-concurrency-reviewer.md  grug.md  infrastructure-guardian.md  integration-detective.md  jobs.md  learning-codifier.md  lesson-harvester.md  logic-detective.md  maintainability-maven.md  memory-backup.md  memory-pruner.md  metrics-collector.md  ousterhout.md  pattern-extractor.md  pattern-scout.md  performance-detective.md  performance-pathfinder.md  posthog-auditor.md  product-visionary.md  project-state-analyst.md  quality-auditor.md  react-pitfalls.md  requirements-oracle.md  security-scanner.md  (+11 more)
chrome/: chrome-native-host
commands/: README.md  address.md  (+122 more)
mcps/kimi-as-mcp/: README.md  pyproject.toml
mcps/kimi-as-mcp/src/kimi_as_mcp/: __init__.py  server.py
(+884 files in other folders)
