[project]
name = "kimi-as-mcp"
version = "0.1.0"
description = "MCP server for delegating tasks to Kimi K2.5 CLI agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
kimi-as-mcp = "kimi_as_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
